--- a/src/lib/styles/app.css
+++ b/src/lib/styles/app.css
@@ -1,43 +1,151 @@
 @import url('./fonts/fonts.css');
 
-body, html {
+body,
+html {
     margin: 0;
     background: black;
     width: 100%;
     height: 100%;
 }
+
 * {
-    font-family: 'JetBrains Mono';
+    font-family: 'UncutSans';
     color: white;
+    font-weight: lighter;
 }
+
 h2 {
+    font-size: 2.5em;
     text-align: center;
 }
+
+h1 {
+    font-size: 3.5em;
+}
+
 main {
     max-width: 900px;
     width: 90vw;
     margin: auto;
+    padding-top: 80px;
 }
+
 .navbar {
     width: 100%;
-    height: 90px;
+    color: white;
+    z-index: 1000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    view-transition-name: header;
+}
+
+footer {
+    width: 100%;
+    color: white;
+    view-transition-name: footer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    gap: 40px;
+    opacity: 0.5;
+    padding: 40px 50px;
+    box-sizing: border-box;
+}
+
+.navbar-inner {
+    width: 100%;
+    margin: auto;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     gap: 40px;
-    padding: 30px;
+    padding: 40px 50px;
+    padding-bottom: 0;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.181), transparent);
     box-sizing: border-box;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.353);
-    color: white;
-    margin-bottom: 10px;
-    z-index: 1000;
-    background: transparent;
+    filter: drop-shadow(0px 0px 20px black) drop-shadow(0px 0px 20px black) drop-shadow(0px 0px 30px black) drop-shadow(0px 0px 40px black);
 }
+
 a {
     color: white;
     text-decoration: none;
 }
+
+a.active {
+    text-decoration: underline !important;
+}
+
 .astha-header {
     font-family: 'Seventh';
     color: white;
+}
+.astha-smol {
+    color: white;
+    font-size: 30px !important;
+}
+
+.vendor-wrapper {
+    width: 100%;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.vendor-card {
+    padding: 30px 40px;
+    background: rgba(255, 255, 255, 0.073);
+    box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.026);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+}
+
+.vendor-card p {
+    margin: 0;
+    padding: 0;
+}
+
+.vendor-card img {
+    height: 50px;
+    max-width: 100%;
+    min-width: 120px;
+    object-fit: contain;
+    width: 100%;
+    max-width: 220px;
+}
+
+p {
+    width: fit-content;
+    margin: auto;
+    text-align: center;
+    word-break: keep-all;
+}
+
+span {
+    white-space: nowrap;
+}
+@media screen and (max-width: 700px) {
+    span {
+        white-space: wrap;
+        display: block;
+    }
+}
+
+.image-grid {
+    width: 100%;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+@media screen and (max-width: 700px) {
+    .image-grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
