--- a/src/lib/styles/fonts/fonts.css
+++ b/src/lib/styles/fonts/fonts.css
@@ -28,3 +28,50 @@
   font-weight: bold;
   font-style: italic;
 }
+@font-face {
+  font-family: 'UncutSans';
+  src: url('./UncutSans-Regular.woff2') format('woff2'),
+       url('./UncutSans-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'UncutSans';
+  src: url('./UncutSans-RegularItalic.woff2') format('woff2'),
+       url('./UncutSans-RegularItalic.woff') format('woff');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'UncutSans';
+  src: url('./UncutSans-Medium.woff2') format('woff2'),
+       url('./UncutSans-Medium.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'UncutSans';
+  src: url('./UncutSans-MediumItalic.woff2') format('woff2'),
+       url('./UncutSans-MediumItalic.woff') format('woff');
+  font-weight:400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'UncutSans';
+  src: url('./UncutSans-Bold.woff2') format('woff2'),
+       url('./UncutSans-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'UncutSans';
+  src: url('./UncutSans-BoldItalic.woff2') format('woff2'),
+       url('./UncutSans-BoldItalic.woff') format('woff');
+  font-weight: bold;
+  font-style: italic;
+}
